Update 8.Q.1 Easy Questions.md

--- a/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
+++ b/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
@@ -68,3 +68,73 @@ Isolation can limit breach scope but is inefficient and does not inherently secu
 
 ---
 
+3. You’re the lead security engineer for a company rolling out a new microservices-based application, and your priority is to ensure that each microservice, running in its own isolated environment, communicates securely with others. To achieve the highest level of protection against unauthorized access between these services, which security approach should you prioritize?
+
+A. Adopt mutual TLS (mTLS) to enable robust service-to-service authentication and encryption, securing all microservice interactions.
+
+B. Implement network segmentation policies using NAT to strictly isolate and control communication between microservices.
+
+C. Set up API gateways with rate limiting to monitor and manage incoming traffic to each microservice, preventing potential abuse or overload.
+
+D. Configure OAuth for seamless sharing of authorizations between microservices, streamlining secure access.
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ A. Adopt mutual TLS (mTLS) to enable robust service-to-service authentication and encryption, securing all microservice interactions.
+
+Explanation:
+mTLS provides strong, bidirectional authentication between communicating microservices, ensuring both client and server verify each other's identities. It enforces encryption, preventing unauthorized access and securing sensitive data during transmission. In a microservices architecture, mTLS effectively reduces the attack surface by tightly controlling which services can interact.
+
+Incorrect Answers:
+
+❌ B. Implement network segmentation policies using NAT:
+While helpful in isolating network segments, NAT does not provide authentication or encryption, so it cannot fully prevent unauthorized service communication.
+
+❌ C. Set up API gateways with rate limiting:
+API gateways help manage traffic and prevent abuse but do not provide the robust authentication and encryption needed between microservices.
+
+❌ D. Configure OAuth for seamless sharing of authorizations:
+OAuth is designed for user-centric authorization and is not optimized for service-to-service authentication and encryption in microservices, adding unnecessary complexity without sufficient security benefits.
+
+</details>
+
+---
+
+4. Your organization has formed a Scrum team to create the E-Commerce website. Which of the following is correct?
+
+A. The Daily Scrum shouldn't exceed 15 minutes
+
+B. Scrum prioritizes prototyping to enhance predictability and manage risks.
+
+C. The Product Owner is accountable for the team's deliverables.
+
+D. The Project Manager should consistently engage with the customers.
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ A. The Daily Scrum shouldn't exceed 15 minutes
+
+Explanation:
+The Daily Scrum, or stand-up meeting, is a brief synchronization meeting designed to last no longer than 15 minutes. This time limit keeps the meeting focused and efficient, helping the team stay aligned without unnecessary delays.
+
+Incorrect Answers:
+
+❌ B. Scrum prioritizes prototyping to enhance predictability and manage risks:
+Scrum encourages iterative development and frequent feedback but does not explicitly prioritize prototyping. The focus is on delivering potentially shippable increments during time-boxed sprints.
+
+❌ C. The Product Owner is accountable for the team's deliverables:
+The Product Owner is responsible for maximizing product value and managing the product backlog, but the entire Scrum Team collectively owns the deliverables.
+
+❌ D. The Project Manager should consistently engage with the customers:
+In Scrum, direct customer engagement is primarily the Product Owner’s responsibility, not the Project Manager’s.
+
+</details>
+
+---
+
+
+
