Update 8.Q.1 Easy Questions.md

--- a/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
+++ b/DOMAIN8: Software Development Security/8.Q.1 Easy Questions.md
@@ -136,5 +136,207 @@ In Scrum, direct customer engagement is primarily the Product Owner’s responsi
 
 ---
 
+5. You are designing a large-scale distributed system that requires communication between various components. Each component needs to be notified when certain events occur in other components. Which design pattern would you use to facilitate this communication in a loosely coupled manner?
 
+A. Factory Method Pattern
+
+B. Strategy Pattern
+
+C. Singleton Pattern
+
+D. Observer Pattern
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Observer Pattern
+
+Explanation:
+The Observer Pattern supports a one-to-many dependency between objects. When one object changes state, all its dependents (observers) are automatically notified and updated. This enables loosely coupled communication where components can subscribe to events without tight integration.
+
+Incorrect Answers:
+
+❌ C. Singleton Pattern:
+Ensures a class has only one instance and provides global access, but does not facilitate inter-component communication.
+
+❌ A. Factory Method Pattern:
+Defines an interface for object creation but doesn’t address communication or notification between components.
+
+❌ B. Strategy Pattern:
+Encapsulates interchangeable algorithms selected at runtime, but isn’t designed for event notification or component communication.
+
+</details>
+
+---
+
+6. Your team is working on a software solution for an insurance firm, and the contract with the firm includes a stipulation in its employment agreements mandating that developers follow secure coding practices. Which of the following strategies would best ensure that developers adhere to this contractual obligation?
+
+A. Providing ongoing training sessions for the developers
+
+B. Conducting regular dynamic code reviews
+
+C. Mandating that developers obtain relevant certifications
+
+D. Integrating an automated code analysis tool into the development environment (IDE)
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Integrating an automated code analysis tool into the development environment (IDE)
+
+Explanation:
+Automated code analysis tools scan code in real time as developers write it, identifying vulnerabilities and enforcing secure coding standards immediately. This proactive approach ensures consistent adherence to security practices by providing instant feedback and reducing reliance on manual reviews.
+
+Incorrect Answers:
+
+❌ B. Conducting regular dynamic code reviews:
+Dynamic reviews are reactive and occur during testing, which may allow vulnerabilities to be introduced during coding before detection.
+
+❌ C. Mandating that developers obtain relevant certifications:
+Certifications don’t guarantee that developers will consistently apply secure coding practices in their daily work.
+
+❌ A. Providing ongoing training sessions for the developers:
+Training raises awareness but doesn’t enforce compliance without tools or processes that provide real-time feedback.
+
+</details>
+
+---
+
+7. A security consultant is evaluating a Python application for possible security risks and notices that it relies heavily on reflection for dynamic code execution. In this scenario, what primary security concern should the consultant focus on due to the use of reflection?
+
+A. Security flaws in API invocation
+
+B. Risk of unauthorized code execution
+
+C. Over-reliance on COTS components
+
+D. Delays in encryption function performance
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ B. Risk of unauthorized code execution
+
+Explanation:
+Reflection allows dynamic code evaluation and execution at runtime, which can be exploited if user-controlled inputs are executed without proper validation. This creates a vulnerability for code injection attacks, enabling attackers to run unauthorized or malicious code and bypass security controls.
+
+Incorrect Answers:
+
+❌ C. Over-reliance on COTS components:
+This relates to vendor dependencies and is unrelated to reflection-based risks.
+
+❌ D. Delays in encryption function performance:
+Reflection does not affect cryptographic performance.
+
+❌ A. Security flaws in API invocation:
+The primary concern is dynamic code execution risk, not API security issues.
+
+</details>
+
+---
+
+8. An external penetration tester is evaluating a web application of a client and identifies a vulnerability that could be exploited by a man-in-the-middle attack. Before proceeding to test this vulnerability further, what should the penetration tester do first?
+
+A. Attempt to capture unencrypted traffic to confirm if sensitive data is being transmitted in plaintext.
+
+B. Document the vulnerability and its consequences.
+
+C. Verify if the application might also be susceptible to other common vulnerabilities, such as cross-site scripting or SQL injection.
+
+D. Notify the client immediately and request explicit permission to proceed with exploiting the identified vulnerability.
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Notify the client immediately and request explicit permission to proceed with exploiting the identified vulnerability.
+
+Explanation:
+Ethical hacking requires penetration testers to obtain explicit consent from clients before exploiting any vulnerabilities. This ensures testing aligns with legal and risk management policies and avoids unauthorized access that could lead to legal issues or loss of trust.
+
+Incorrect Answers:
+
+❌ C. Verify if the application might also be susceptible to other common vulnerabilities:
+While important, further testing without permission could cross ethical boundaries.
+
+❌ A. Attempt to capture unencrypted traffic:
+Capturing traffic without consent risks unauthorized access and potential data exposure.
+
+❌ B. Document the vulnerability and its consequences:
+Documentation is necessary but should follow client notification and approval.
+
+</details>
+
+---
+
+9. You’ve implemented a stored procedure in a legacy database system to log all user transactions. The log includes the start time of each transaction, the operation performed, the user who executed it, and the end time when the transaction completed. However, you've noticed that the stored procedure often fails to record the end time, leaving this field blank. What action should you take first?
+
+A. Verify database administration settings to improve performance
+
+B. Modify the stored procedure to remove the "End of transaction" field
+
+C. Check the atomicity of the stored procedure
+
+D. Enforce mandatory consistency for all database transactions
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. Check the atomicity of the stored procedure
+
+Explanation:
+Atomicity ensures that a transaction is fully completed or not at all. The missing end time suggests that the stored procedure might be failing partway through. Reviewing atomicity helps ensure each transaction is fully logged or, if interrupted, does not result in incomplete entries.
+
+Incorrect Answers:
+
+❌ D. Enforce mandatory consistency for all database transactions:
+Consistency addresses accuracy across transactions but doesn’t fix incomplete logging within the procedure.
+
+❌ B. Modify the stored procedure to remove the "End of transaction" field:
+Removing the field avoids the problem instead of resolving incomplete logging.
+
+❌ A. Verify database administration settings to improve performance:
+Performance tuning is not the primary issue; the problem lies in procedural completeness.
+
+</details>
+
+---
+
+10. ou've found that in your organization’s legacy database, which lacks audit trails, entries are frequently altered, likely due to an insider threat. What steps can you take to address this issue and identify the untrustworthy employee?
+
+A. Install keyloggers on employees' devices
+
+B. Regularly hash the most critical fields
+
+C. Implement Role-Based Access Control (RBAC)
+
+D. Set up triggers for logging changes
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Set up triggers for logging changes
+
+Explanation:
+Database triggers can automatically log changes to data, recording who made the change and when. This creates an audit trail that helps detect suspicious activity and identify the insider responsible for unauthorized modifications.
+
+Incorrect Answers:
+
+❌ C. Implement Role-Based Access Control (RBAC):
+RBAC limits who can access or modify data, reducing risk but may not identify who altered data if abuse happens within authorized roles.
+
+❌ B. Regularly hash the most critical fields:
+Hashing helps detect data tampering but does not reveal who made the changes.
+
+❌ A. Install keyloggers on employees' devices:
+Keyloggers raise serious ethical and legal concerns and violate privacy rights.
+
+</details>
+
+---
 
