--- a/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
+++ b/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
@@ -3,8 +3,11 @@
 1. As a security engineer, you are tasked with making the active IDS function as an Intrusion Prevention System (IPS) while following best practices outlined in NIST SP 800-94. According to NIST SP 800-94, which of the following is a key requirement for making an active IDS function as an IPS?
 
 A. It must be installed in the DMZ
+
 B. It must be properly hardened
+
 C. It must fail securely
+
 D. It must be in line with the traffic
 
 <details> <summary>Show answer</summary>
@@ -37,8 +40,11 @@ Fail-secure mechanisms (fail-open or fail-closed) improve resilience but are not
 2. You are a security analyst conducting a risk assessment for a newly discovered vulnerability in your company's software. As part of your evaluation, you use the Common Vulnerability Scoring System (CVSS) to determine the severity and potential impact of the vulnerability. CVSS provides various metrics to assess risk, but which of the following is NOT an area of concern in a CVSS assessment?
 
 A. Base metrics for qualities intrinsic to a vulnerability
+
 B. Environmental metrics for vulnerabilities that depend on a particular implementation or environment
+
 C. Temporal metrics for characteristics that evolve over the lifetime of a vulnerability
+
 D. International compliance metrics related to the vulnerability
 
 <details> <summary>Show answer</summary>
@@ -64,3 +70,294 @@ Incorrect Answers:
 </details>
 
 ---
+
+3. A junior administrator is tasked with installing an application on a Windows server. The application requires specific privileges to run properly. Which of the following account types should the administrator use to ensure the application runs with the necessary privileges while minimizing security risks?
+
+A. Local Admin Account
+
+B. Service Account
+
+C. Domain Admin Account
+
+D. Application Admin Account
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ B. Service Account
+
+Explanation:
+Service accounts are designed to run applications or services with the minimal privileges needed to access required system resources. This approach limits security risks while ensuring the application functions properly.
+
+Incorrect Answers:
+
+❌ A. Local Admin Account:
+Provides broad privileges on a single machine, which is over-privileged and increases security risks.
+
+❌ C. Domain Admin Account:
+Has unrestricted domain-wide privileges, making it unsuitable and risky for running an application.
+
+❌ D. Application Admin Account:
+A less clearly defined term and may not be set up with proper limited privileges, making it a less reliable choice.
+
+</details>
+
+---
+
+4. An IT forensic investigator has been tasked with preserving evidence from a suspect’s hard drive as part of an ongoing investigation. To ensure the data remains unaltered and can later be analyzed accurately, the investigator needs to create a forensic image of the drive. Which tool would be most helpful in ensuring the integrity of the data while making this copy?
+
+A. Hashing tool
+
+B. Data diode
+
+C. Write blocker
+
+D. Cleanroom
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. Write blocker
+
+Explanation:
+A write blocker allows data to be read from a storage device without risking any modifications. This ensures the original evidence remains unaltered during forensic imaging, preserving its integrity for later analysis.
+
+Incorrect Answers:
+
+❌ A. Hashing tool:
+Used to verify data integrity by generating hash values, but does not prevent changes during imaging.
+
+❌ D. Cleanroom:
+A controlled environment for physical repairs on damaged drives, not necessary for imaging functional drives.
+
+❌ B. Data diode:
+A one-way data transfer device used in secure environments, unrelated to forensic imaging.
+
+</details>
+
+---
+
+5. After finalizing a Service Level Agreement (SLA) with one of your service providers, how do you plan to internally communicate and share the responsibilities to your team to ensure support for the contractual SLA? (Choose the best answer)
+
+A. Using OLAs (Operational Level Agreements)
+
+B. Using frameworks
+
+C. Sharing Contractual Accountability and Liabilities
+
+D. Through Policies
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ A. Using OLAs (Operational Level Agreements)
+
+Explanation:
+OLAs are internal agreements that define operational responsibilities and relationships between teams. They help translate SLA requirements into clear, actionable tasks within the organization, ensuring smooth delivery and accountability.
+
+Incorrect Answers:
+
+❌ B. Using frameworks:
+Too broad and nonspecific for communicating immediate team responsibilities related to SLAs.
+
+❌ C. Sharing Contractual Accountability and Liabilities:
+Important at a higher organizational level but lacks detailed operational guidance for daily team activities.
+
+❌ D. Through Policies:
+Policies provide high-level guidelines but usually don’t cover the specific, detailed responsibilities needed for SLA support.
+
+</details>
+
+---
+
+6. Your organization is reviewing its security posture against email-related threats. Which of the following types of attacks can use emails as a threat vector? (Choose all that apply)
+
+A. Mail bombing
+
+B. Phishing
+
+C. Man-in-the-Middle (MITM)
+
+D. Distributed Denial of Service (DDoS)
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ A. Mail bombing
+✅ B. Phishing
+✅ C. Man-in-the-Middle (MITM)
+✅ D. Distributed Denial of Service (DDoS)
+
+Explanation:
+
+Phishing: Fraudulent emails deceive recipients into revealing sensitive information or executing malicious actions.
+
+Mail bombing: Flooding an email server or recipient with excessive emails, causing disruption or denial of service.
+
+Man-in-the-Middle (MITM): Emails can be used to trick users into connecting to malicious networks or reveal credentials; unencrypted emails can be intercepted or altered.
+
+Distributed Denial of Service (DDoS): Malicious emails can distribute malware that enlists devices into botnets, which then perform DDoS attacks.
+
+</details>
+
+---
+
+7. An IT investigator has been assigned to discover how confidential company documents ended up on a public file-sharing platform. There’s a strong suspicion that an internal employee transferred the data over the network to an external server, but this theory still needs verification. Which tool or method would help confirm if this hypothesis is correct?
+
+A. File Integrity Monitoring
+
+B. Cryptographic Data Shredding
+
+C. Data Loss Prevention (DLP)
+
+D. Network Log Analysis
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ C. Data Loss Prevention (DLP)
+✅ D. Network Log Analysis
+
+Explanation:
+
+Data Loss Prevention (DLP): Specifically designed to monitor and control sensitive data movement, DLP tools can detect and alert on unauthorized transfers to external servers, helping confirm insider exfiltration attempts.
+
+Network Log Analysis: By examining network traffic logs, investigators can identify suspicious transmissions to external or unauthorized servers, correlating timing and destinations to the suspected data leak.
+
+Incorrect Answers:
+❌ Cryptographic Data Shredding: This securely deletes data but does not provide monitoring or detection capabilities for data exfiltration.
+❌ File Integrity Monitoring (FIM): Focuses on detecting unauthorized file changes, not tracking file transfers or movement, thus less useful for confirming data exfiltration events.
+
+</details>
+
+---
+
+8. Your company has just purchased a new software solution to manage sensitive customer data. As the cybersecurity lead, you are responsible for securing the software during installation. Which of the following are standard security hardening steps you should follow when installing the new software? (Choose all that apply)
+
+A. Conducting a legal compliance check
+
+B. Implementing secure logging and monitoring
+
+C. Performing basic configuration
+
+D. Ensuring documentation and training
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ B. Implementing secure logging and monitoring
+✅ C. Performing basic configuration
+
+Explanation:
+
+Implementing secure logging and monitoring: Ensures all activities (access, errors) are recorded for audits and threat detection. Continuous monitoring helps detect suspicious behaviors early.
+
+Performing basic configuration: Includes changing default credentials, limiting permissions, and adjusting settings to minimize attack surfaces and enforce the Principle of Least Privilege.
+
+Incorrect Answers:
+❌ Conducting a legal compliance check: Important for governance but not a technical hardening step during installation.
+❌ Ensuring documentation and training: Valuable for usability and operational success but does not directly secure the software during installation.
+
+</details>
+
+---
+
+9. Your company has just deployed a new web application to enhance customer engagement. As part of securing the application post-installation, you need to decide the first critical step to minimize potential security risks. What should you do first?
+
+A. Search for known CVEs (Common Vulnerabilities and Exposures) related to the application
+
+B. Perform a vulnerability scan of the web application
+
+C. Add the application to the IT Service Management (ITSM) system
+
+D. Change the default credentials of the application
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Change the default credentials of the application
+
+Explanation:
+Changing default credentials is the first and most critical step after installing a web application. Default usernames and passwords are widely known and easily exploited by attackers. Securing these credentials immediately prevents unauthorized access.
+
+Incorrect Answers:
+
+❌ Perform a vulnerability scan of the web application: Important but should come after basic security configurations like changing default credentials. Scanning too early can reveal obvious vulnerabilities that are easily mitigated.
+
+❌ Add the application to the IT Service Management (ITSM) system: An administrative task for tracking and monitoring, but it doesn’t directly reduce immediate security risks.
+
+❌ Search for known CVEs related to the application: Valuable for patching and risk management but typically done after initial hardening steps like securing credentials.
+
+</details>
+
+---
+
+10. Your company has identified multiple buffer overflow issues in its internally developed software, which could lead to significant vulnerabilities. As the security lead, what is the first countermeasure you should implement to address these issues effectively?
+
+A. Apply proper software validation and testing techniques
+
+B. Implement robust input validation in the software
+
+C. Ensure the operating system is updated with the latest security patches
+
+D. Conduct training sessions for programmers on secure coding practices
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Conduct training sessions for programmers on secure coding practices
+
+Explanation:
+Buffer overflow vulnerabilities often result from poor coding practices like inadequate input validation and improper memory handling. While technical fixes like input validation are important, training developers on secure coding is the foundational step to prevent these issues from occurring in the first place.
+
+Incorrect Answers:
+
+❌ Implement robust input validation in the software: This is an effective technical fix for existing code but does not prevent new vulnerabilities if developers are not trained.
+
+❌ Ensure the operating system is updated with the latest security patches: While important for overall security, OS patching does not directly address application-level buffer overflows.
+
+❌ Apply proper software validation and testing techniques: These are reactive steps to find vulnerabilities but don’t prevent insecure coding practices that cause them.
+
+</details>
+
+---
+
+11. Your organization is embarking on developing a new software application that will handle sensitive customer data. To ensure that security vulnerabilities are minimized throughout the development process, which of the following activities should you prioritize to prevent security issues?
+
+A. Writing comprehensive test cases
+
+B. Hiring experienced and qualified developers
+
+C. Conducting misuse case testing
+
+D. Gathering and defining detailed requirements
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. Gathering and defining detailed requirements
+
+Explanation:
+Security must be integrated from the very beginning of the software development lifecycle. By gathering and defining detailed requirements early on, the team can identify necessary security controls, assess potential risks, and align security goals with business needs. This proactive approach helps avoid costly fixes and vulnerabilities later in development.
+
+Incorrect Answers:
+
+❌ Hiring experienced and qualified developers: Important but insufficient without clear, security-focused requirements guiding development.
+
+❌ Conducting misuse case testing: Useful later for identifying vulnerabilities, but it cannot replace the foundational security planning done during requirements gathering.
+
+❌ Writing comprehensive test cases: Test cases verify functionality but won’t catch security issues unless those concerns are included in the initial requirements.
+
+</details>
+
+---
+
