Update 7.Q.2 Hard Questions.md

--- a/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
+++ b/DOMAIN7: Security Operations/7.Q.2 Hard Questions.md
@@ -237,4 +237,104 @@ Incorrect Answers:
 
 ---
 
+8. Your organization is setting up a SIEM (Security Information and Event Management) system, but there are certain factors that could prevent it from being fully effective. Which of the following would completely undermine the usefulness of your SIEM implementation? (Choose two)
 
+A. Absence of event deduplication rules
+
+B. Lack of an inventory of monitored nodes
+
+C. Failure to use NTP (Network Time Protocol) on all monitored nodes
+
+D. Lack of event correlation rules
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ B. Lack of an inventory of monitored nodes
+✅ C. Failure to use NTP (Network Time Protocol) on all monitored nodes
+
+Explanation:
+
+Without a complete and accurate inventory of all monitored nodes, the SIEM cannot collect logs from all critical systems, leaving blind spots in monitoring and missing potential security incidents.
+
+Without NTP to synchronize time across devices, event timestamps will be inconsistent, making correlation and incident investigation unreliable or impossible.
+
+Incorrect Answers:
+
+❌ A. Absence of event deduplication rules: While deduplication improves efficiency by reducing noise, its absence does not completely negate SIEM functionality. The SIEM can still collect and process events, though it may be noisier.
+
+❌ D. Lack of event correlation rules: Correlation rules enhance detection by linking related events, but their absence reduces effectiveness rather than nullifying SIEM functionality. Basic logging and alerting can still occur.
+
+</details>
+
+---
+
+9. Your organization is working to maintain an up-to-date Business Continuity Plan (BCP). When should the BCP be updated to ensure it is effective and relevant? (Choose all that apply)
+
+A. During a security incident
+
+B. Regularly at specified time intervals (once or twice a year)
+
+C. When a system or service changes
+
+D. Before an audit
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ B. Regularly at specified time intervals (once or twice a year)
+✅ C. When a system or service changes
+
+Explanation:
+
+Regular updates ensure the BCP stays current with organizational changes and emerging risks, maintaining its effectiveness over time.
+
+Any significant changes in systems or services can impact business operations and recovery strategies, so the BCP must reflect these updates to remain accurate.
+
+Incorrect Answers:
+
+❌ D. Before an audit
+While it’s good to have the BCP updated before audits, relying solely on audits to update the plan means it may be outdated during normal operations. Continuous maintenance is better.
+
+❌ A. During a security incident
+Updating the BCP during an incident distracts from response efforts. Instead, update the plan after resolution and review lessons learned to improve it.
+
+</details>
+
+---
+
+10. You are tasked with designing a Disaster Recovery Plan (DRP) for your organization's primary data center, which processes critical business operations. Which of the following should be your first consideration?
+
+A. Choosing the correct power supply solution for the backup Data Center
+
+B. Evaluating the ALE of natural disasters for the backup data center
+
+C. Ensuring the Disaster Recovery Plan integrates seamlessly with the Business Continuity Plan (BCP)
+
+D. Assessing the Annualized Loss Expectancy (ALE) of natural disasters for the primary data center
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ B. Evaluating the ALE of natural disasters for the backup data center
+
+Explanation:
+Annualized Loss Expectancy (ALE) measures the expected financial loss due to specific risks over a year. When designing a DRP, it’s critical to first evaluate the risks to the backup data center since the DRP’s success depends on having a resilient secondary site. Understanding the backup site’s exposure to natural disasters helps ensure it can reliably restore operations during an incident.
+
+Incorrect Answers:
+
+❌ A. Choosing the correct power supply solution for the backup data center:
+Power supply is important but is an implementation detail that comes after risk evaluation. You must first select and assess the backup site’s risk before addressing infrastructure components like power.
+
+❌ D. Assessing the ALE of natural disasters for the primary data center:
+While useful for overall risk understanding, the DRP focuses on recovery capabilities via the backup site. The ALE of the primary site is less relevant to DRP design than the backup site’s resilience.
+
+❌ C. Ensuring the Disaster Recovery Plan integrates seamlessly with the Business Continuity Plan (BCP):
+Integration is important but only after ensuring the backup site is capable. Without a reliable backup data center, integration with BCP won’t be effective.
+
+</details>
+
+---
