Update 8.Q.2 Hard Questions.md

--- a/DOMAIN8: Software Development Security/8.Q.2 Hard Questions.md
+++ b/DOMAIN8: Software Development Security/8.Q.2 Hard Questions.md
@@ -123,3 +123,168 @@ Incorrect Answers:
 </details>
 
 ---
+
+5. You are managing the security of your organization's IT infrastructure and need to ensure that all the operating systems in use are properly identified and classified. Which of the following systems provides a standardized naming scheme for operating systems to help with this task?
+
+A. CVE (Common Vulnerabilities and Exposures)
+
+B. CVSS (Common Vulnerability Scoring System)
+
+C. CPE (Common Platform Enumeration)
+
+D. STRIDE
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ C. CPE (Common Platform Enumeration)
+
+Explanation:
+CPE provides a standardized, consistent naming scheme for software platforms, including operating systems. It allows organizations to uniquely identify, classify, and reference operating systems and software products across security tools and frameworks. This standardized approach aids in vulnerability management and risk assessment.
+
+Incorrect Answers:
+❌ CVE: Focuses on identifying known vulnerabilities, not naming platforms.
+❌ CVSS: Provides a scoring system for vulnerability severity, not a naming convention.
+❌ STRIDE: A threat modeling framework, unrelated to naming or classification of OS.
+
+</details>
+
+---
+
+6. You are working on a development project where the code needs to run seamlessly across various operating systems without requiring significant modifications. Your team is exploring solutions to enable this portability. Which of the following tools or technologies can help achieve portable execution of code across different operating systems?
+
+A. Sandbox
+
+B. Docker
+
+C. Runtime environment
+
+D. VPN
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+✅ B. Docker
+✅ C. Runtime environment
+
+Explanation:
+A runtime environment, such as the Java Virtual Machine (JVM) or .NET Common Language Runtime (CLR), provides a platform-independent layer, allowing code to execute on any system with the runtime installed, enabling portability across operating systems. Docker uses containerization to package applications and their dependencies into portable containers that run consistently across different operating systems where Docker is supported.
+
+Incorrect Answers:
+❌ A. Sandbox: Primarily used to isolate code execution for security testing, not for ensuring cross-OS portability.
+❌ D. VPN: Provides secure network communication and does not facilitate code portability or execution across operating systems.
+
+</details>
+
+---
+
+7. You are working on a project where you need to choose a programming language that is interpreted, allowing for flexibility and quicker debugging. Which of the following languages is interpreted rather than compiled? (Choose all that apply)
+
+A. Java
+
+B. JavaScript
+
+C. C++
+
+D. Python
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+✅ B. JavaScript
+✅ D. Python
+
+Explanation:
+Python is an interpreted language, where code is executed line-by-line by the interpreter at runtime, enabling flexibility and faster debugging, though sometimes at the cost of slower performance compared to compiled languages.
+JavaScript is also an interpreted language, typically run in browsers or environments like Node.js, allowing dynamic execution and flexibility for web applications.
+
+Incorrect Answers:
+❌ C++ is a compiled language, requiring code compilation to machine code before execution, offering faster runtime performance.
+❌ Java is a hybrid language: it is compiled into bytecode, which is then interpreted by the Java Virtual Machine (JVM). While it involves interpretation, Java is not fully interpreted in the traditional sense.
+
+</details>
+
+---
+
+8. Your organization is reviewing its patch management policy to improve system security and reliability. As part of the review, you identify best practices and common misconceptions regarding patch deployment. Which of the following statements about patch management is incorrect?
+
+A. Patches should only be obtained from authorized and trusted sources.
+
+B. All installed patches should be properly documented.
+
+C. Patches should be thoroughly tested before deployment.
+
+D. All available patches must be deployed as soon as possible.
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ D. All available patches must be deployed as soon as possible.
+
+Explanation:
+While timely patching is important for security, not all patches should be deployed immediately. Patches must be thoroughly tested first to ensure they do not disrupt critical systems or applications. Some patches addressing non-critical issues may be scheduled based on priority and risk assessment to avoid unnecessary downtime or conflicts.
+
+Incorrect Answers:
+❌ A. Obtaining patches only from authorized and trusted sources is essential to avoid introducing malware or counterfeit updates.
+❌ B. Documenting all installed patches is necessary for tracking system updates and ensuring compliance.
+❌ C. Testing patches before deployment is a critical best practice to prevent new issues or conflicts in the environment.
+
+</details>
+
+---
+
+9. You are discussing software development with your team, focusing on the advantages of transitioning from a low-level programming language, such as Assembly, to a high-level language, like Python or Java. Which of the following statements best describes the benefits of using high-level programming languages compared to low-level ones? (Choose all that apply)
+
+A. The portability between different operating systems increases.
+
+B. Instructions better approximate human communications.
+
+C. Security is more embedded in the code.
+
+D. The time needed to craft an application decreases.
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+✅ A. The portability between different operating systems increases.
+✅ B. Instructions better approximate human communications.
+✅ D. The time needed to craft an application decreases.
+
+Explanation:
+
+Instructions better approximate human communications: High-level languages use syntax closer to natural language, making code easier to read, write, and maintain compared to low-level Assembly language with cryptic commands.
+
+The time needed to craft an application decreases: High-level languages provide abstractions, standard libraries, and frameworks that reduce coding effort and speed up development. For example, writing a simple program like "Hello, World!" takes one line in Python but many steps in Assembly.
+
+The portability between different operating systems increases: High-level languages abstract hardware details, allowing the same code to run on different platforms with minimal or no modification (e.g., Java’s JVM, Python interpreters across OSes).
+
+Incorrect Answer:
+❌ C. Security is more embedded in the code: While some high-level languages offer features like automatic memory management that help avoid certain vulnerabilities, security depends mainly on developer practices and external controls. High-level languages do not inherently guarantee secure code.
+
+</details>
+
+---
+
+10. As part of your organization's efforts to implement DevSecOps, you are working to integrate key practices across different departments. Which of the following best describes the key areas integrated by DevSecOps?
+
+A. Software Development, Cybersecurity, Operations
+B. Policies Development, Cybersecurity, Operational Agreements
+C. Software Development, Safety, Operations
+D. Policies Development, Cybersecurity, Operations
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+✅ A. Software Development, Cybersecurity, Operations
+
+Explanation:
+DevSecOps integrates software development, cybersecurity, and operations into a unified workflow. The core idea is to embed security practices throughout the development and deployment process rather than treating security as a separate, final step. This approach ensures continuous security integration, testing, and automation in the software lifecycle, enhancing overall security posture.
+
+Incorrect Answers:
+❌ B. Policies Development, Cybersecurity, Operational Agreements: While important in IT governance, policies and agreements are not the core focus of DevSecOps, which centers on integrating security into development and operations processes.
+❌ C. Software Development, Safety, Operations: Safety concerns physical or workplace safety and are unrelated to the security focus of DevSecOps.
+❌ D. Policies Development, Cybersecurity, Operations: Policies are necessary but not the primary integration point for DevSecOps, which emphasizes practical integration of security into development and operational workflows.
+
+</details>
+
+---
