Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -30,7 +30,7 @@ Now imagine taking Agile and stretching it over a large enterprise with hundreds
 
 ```mermaid
 
-flowchart LR
+flowchart TD
   A["🏗️ Development Methodologies & Security Awareness"]:::title --> B["Waterfall Model"]:::node
   A --> C["Agile & Scrum"]:::node
   A --> D["Scaled Agile Framework (SAFe)"]:::node
