Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -227,7 +227,15 @@ Every time a user logs in, a query runs, a system boots, or a scheduled job exec
 
 **Maintenance** is where the system changes. Not dramatically like in design or development, but through steady, quiet updates. Patch management is a central concept here. Imagine you have a CRM system used by 400 salespeople across five countries. A zero-day vulnerability in its web framework gets discovered. The vendor releases a patch. Do you apply it immediately? Probably not directly in production. First, you review the patch’s impact. Then you apply it in a staging environment. You test to see if it breaks existing workflows. Only then do you schedule a controlled deployment, usually during a maintenance window. This process—when handled maturely—can be the difference between a secure system and a breach. Equifax’s famous 2017 breach stemmed from a missed patch. The vulnerability had a fix available. It simply wasn’t applied in time. This is why mature patch management processes include not only the technical steps but also asset inventories, configuration management databases (CMDBs), and alerting systems that track missing patches.
 
-Maintenance also includes the enhancement of features, retirement of obsolete components, and adjusting configurations as the operating environment evolves. The team must also track security baselines. For example, if encryption standards change—say, you move from TLS 1.1 to TLS 1.3—you need to evaluate which services, certificates, and dependencies will be affected. 
+Maintenance also includes:
+
+- the enhancement of features
+
+- retirement of obsolete components
+
+- adjusting configurations as the operating environment evolves.
+
+The team must also track security baselines. For example, if encryption standards change—say, you move from TLS 1.1 to TLS 1.3—you need to evaluate which services, certificates, and dependencies will be affected. 
 
 So you move carefully, version by version, testing everything. Maintenance is about discipline. It’s where your organization’s change control policy lives and breathes. All changes must be tracked, authorized, and reviewed. Operations and maintenance also tie into incident response and continuous monitoring. A well-maintained system should not only function smoothly but also have the eyes and ears of the security team embedded in its fabric. SIEM systems should be fed with logs from applications, operating systems, access control systems, and firewalls. Alerts should be tuned—not too noisy, not too quiet.
 
