Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -272,11 +272,24 @@ Good operations and maintenance feed into software retirement. Eventually, all s
 
 Change management in the software development lifecycle is not just about tracking who made which code update and when—it’s a structured safeguard for the entire business, especially from a security perspective. Changes can be as small as updating a configuration file or as large as replacing a core component of the application. Regardless of size, every change has the potential to introduce vulnerabilities, disrupt service, or inadvertently remove critical protections. This is why change management is one of the most security-sensitive practices in the entire lifecycle. 
 
-:bulb: When changes are made without visibility, you end up with what's called shadow IT: undocumented changes, unauthorized tools, and mystery behaviors that can blindside operations and security teams alike. 
+:bulb: When changes are made without visibility, you end up with what's called **shadow IT**: undocumented changes, unauthorized tools, and mystery behaviors that can blindside operations and security teams alike. 
 
-In high-assurance environments, such as financial systems or healthcare platforms, a single untracked change can invalidate months of security work, introduce a regulatory violation, or even expose sensitive data. To appreciate the importance of change management, imagine a company that skips proper review and pushes a hotfix straight to production. Maybe the code solves the bug but disables input validation. The development team is thrilled the bug is fixed—meanwhile, attackers are now able to inject malicious inputs, breach the system, and exfiltrate data. Without a change management process that includes risk assessment and code review, the security implications are missed, and what seemed like progress actually opened the door to a cyber incident. The core of change management involves several stages: request, assessment, approval, implementation, and post-change review. Each of these stages should be understood not as bureaucratic red tape but as essential for ensuring that changes are safe, documented, reversible, and aligned with security policies. When done right, this process helps both developers and security teams collaborate smoothly, keeping innovation and protection in balance. 
+In high-assurance environments, such as financial systems or healthcare platforms, a single untracked change can invalidate months of security work, introduce a regulatory violation, or even expose sensitive data. To appreciate the importance of change management, imagine a company that skips proper review and pushes a hotfix straight to production. Maybe the code solves the bug but disables input validation. The development team is thrilled the bug is fixed—meanwhile, attackers are now able to inject malicious inputs, breach the system, and exfiltrate data. Without a change management process that includes risk assessment and code review, the security implications are missed, and what seemed like progress actually opened the door to a cyber incident. 
 
-:necktie: The most important aspect of change management is control. Control over what goes into production, who made the decision, what risks were considered, and how it can be undone if something goes wrong. Every change should have a rollback plan.
+The core of change management involves several stages: 
+- request
+
+- assessment
+
+- approval
+
+- implementation
+
+- post-change review
+
+Each of these stages should be understood not as bureaucratic red tape but as essential for ensuring that changes are safe, documented, reversible, and aligned with security policies. When done right, this process helps both developers and security teams collaborate smoothly, keeping innovation and protection in balance. 
+
+:necktie: The most important aspect of change management is **control**. Control over what goes into production, who made the decision, what risks were considered, and how it can be undone if something goes wrong. Every change should have a rollback plan.
 
 Imagine deploying a new feature at 5:00 p.m. on a Friday, only to realize it crashes the system. Without rollback capabilities, you’re left scrambling all weekend. With good change control, you simply reverse the change and resume operations. This is where version control systems, automated deployment pipelines, and audit trails play a huge role—they give you the tools to track, test, and trust your changes. 
 Even more critically, change management supports the principle of least privilege. Only authorized personnel should be able to approve or implement certain types of changes, and this access should be auditable. If everyone can modify firewall rules or database schemas without oversight, it’s only a matter of time before something disastrous happens—either through mistake or malice. Segregation of duties is another security anchor here. The person requesting a change shouldn't be the one approving or deploying it. This separation reduces the risk of insider threats and enforces checks and balances.
@@ -315,7 +328,9 @@ An IPT is a multidisciplinary group of professionals formed to collaborate throu
 
 By forming an IPT, you're essentially building a bridge between disciplines—developers know what security expects, security understands the business priorities, operations can give feedback on deployment pain points, and legal can call out regulatory boundaries before the product is out the door. This cross-functional approach supports informed trade-offs, rapid decision-making, and better risk visibility. From a cybersecurity standpoint, the value is enormous. Let’s say a developer proposes using a new cloud storage API for performance. If the security member of the IPT is there, they can immediately raise concerns about encryption standards, data residency, or exposure to new threat vectors. Instead of rejecting the idea after the code is written, the team finds a secure alternative or adds controls proactively.
 
-You’ll often hear the phrase “shift left” in DevSecOps discussions, which means addressing security early in the lifecycle. Well, IPTs are one of the most practical ways to shift left. They break down the artificial barrier that once separated security people from creative processes. Instead of being the department of “no,” cybersecurity becomes an enabler—helping the team build resilient, compliant, and trustworthy systems. IPTs can operate at multiple levels. Some are tactical, embedded in a specific sprint team or product release cycle. Others are strategic, guiding architectural direction across multiple releases or even entire product portfolios. In regulated industries, IPTs often have formal responsibilities like reviewing system authorization packages or contributing to security plans and documentation for compliance audits. They’re also the people who write or review the system security plan (SSP), coordinate with external auditors, and help gather evidence for a system’s accreditation.
+You’ll often hear the phrase “*shift left*” in DevSecOps discussions, which means addressing security early in the lifecycle. Well, IPTs are one of the most practical ways to shift left. They break down the artificial barrier that once separated security people from creative processes. Instead of being the department of “no,” cybersecurity becomes an enabler—helping the team build resilient, compliant, and trustworthy systems. 
+
+IPTs can operate at multiple levels. Some are tactical, embedded in a specific sprint team or product release cycle. Others are strategic, guiding architectural direction across multiple releases or even entire product portfolios. In regulated industries, IPTs often have formal responsibilities like reviewing system authorization packages or contributing to security plans and documentation for compliance audits. They’re also the people who write or review the system security plan (SSP), coordinate with external auditors, and help gather evidence for a system’s accreditation.
 
 :necktie: IPTs help remove finger pointing. Instead of blaming developers or operations after an incident, everyone owns the outcome together.
 
@@ -343,5 +358,5 @@ It’s not uncommon to see an IPT become the nucleus of a continuous improvement
 
 <details> <summary>Show answer</summary> IPTs improve compliance by integrating regulatory knowledge into the development process. Security and compliance team members help ensure documentation is accurate, controls are in place, and audit evidence is gathered continuously, reducing last-minute panic and audit failures. </details>
 
----
+
 
